cmake_minimum_required(VERSION 3.23)
project(STL)

set(CMAKE_CXX_STANDARD 14)

add_executable(vector vector_test.cpp )
add_executable(string string_test.cpp)
add_executable(template template_test.cpp)
add_executable(class_template class_template_test.cpp)
add_executable(person person.cpp)
add_executable(MyArray MyArray.cpp)
add_executable(vector_test2 vector_test2.cpp)
add_executable(deque_test deque_test.cpp)
add_executable(demo1 demo1.cpp)
add_executable(stack_test stack_test.cpp)
add_executable(queue_test queue_test.cpp)
add_executable(list list_test.cpp)
add_executable(set set_test.cpp)
add_executable(map map_test.cpp)
add_executable(map_demo map_demo.cpp)
